made these changes for my adv devops experiment so as to see the changes being made on the website that i deployed

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
+    <h1>Hurray!!</h1>
+    <h2>I have successfully edited the index.html file. I also commited those changes in the forked repository and now I am able to see those changes on the deployed website.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation. Incedge 2020</p>
   </div>
 </body>
 </html>
 
+D
