2nd commit to the index.html file for today

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sample Deployment</title>
+  <title>Mohit's edit</title>
   <style>
     body {
       color: #ffffff;
